// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty table with columns and default empty message, does not crash and matches snapshot 1`] = `
<table
  class="width100_zdxht7-o_O-table_zuaglh"
>
  <thead>
    <tr>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Date
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Status
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Created By
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        To
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Amount
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Reason
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colspan="6"
      >
        <div
          class="width100_zdxht7-o_O-flex_jro6t0-o_O-justifyContentCenter_agrn11-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-noRows_a5gpv3"
        >
          No data
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders empty table with columns and empty message, does not crash and matches snapshot 1`] = `
<table
  class="width100_zdxht7-o_O-table_zuaglh"
>
  <thead>
    <tr>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Date
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Status
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Created By
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        To
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Amount
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Reason
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colspan="6"
      >
        <div
          class="width100_zdxht7-o_O-flex_jro6t0-o_O-justifyContentCenter_agrn11-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-noRows_a5gpv3"
        >
          Test data is empty
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders empty table without crashing and matches snapshot 1`] = `
<table
  class="width100_zdxht7-o_O-table_zuaglh"
>
  <thead>
    <tr>
      
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colspan="0"
      >
        <div
          class="width100_zdxht7-o_O-flex_jro6t0-o_O-justifyContentCenter_agrn11-o_O-alignItemsCenter_1moixrt-o_O-textTransformUppercase_4efw5a-o_O-fontWeight400_tt122m-o_O-noRows_a5gpv3"
        >
          No data
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders table with columns, data and empty message, does not crash and matches snapshot 1`] = `
<table
  class="width100_zdxht7-o_O-table_zuaglh"
>
  <thead>
    <tr>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Date
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Status
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Created By
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        To
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Amount
      </th>
      <th
        class="fontWeight400_tt122m-o_O-textAlignLeft_e4x16a-o_O-textTransformUppercase_4efw5a-o_O-px2_6ebohg-o_O-th_4acr85"
      >
        Reason
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        23.05.2012
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        Request 2/3
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        Mark Spenser
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        Bitcoin Address
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        100
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        Test
      </td>
    </tr>
    <tr>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        <div>
          '23.05.2012'
        </div>
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        <div>
          'Request 2/3'
        </div>
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        <i>
          'Mark Spenser'
        </i>
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        <i>
          'Bitcoin Address'
        </i>
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        <b>
          100
        </b>
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        <b>
          'Test'
        </b>
      </td>
    </tr>
    <tr>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        23.05.2012
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        Mark Spenser
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        100
      </td>
      <td
        class="px2_6ebohg-o_O-py4_r2hutn-o_O-td_1f1ffwf"
      >
        Test
      </td>
    </tr>
  </tbody>
</table>
`;
